--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Excel在线表格：https://kdocs.cn/l/cesQMkm6QxNc
 
 ## 软件列表：
 
-GitHub：https://github.com/yoyodadada/haoruanfenxiang/blob/master/List.md
+GitHub：https://github.com/axiuluoshiwo/kemiaofx
 
 github.io（免翻）：https://yoyodadada.github.io/haoruanfenxiang/List.md
 
