--- a/README
+++ b/README
@@ -20,7 +20,7 @@ Telegram频道：https://t.me/kemiaosw
 
 Telegram群组：https://t.me/+ilqAQsWGXvxkOGE1
 
-＃＃主要在中国移动公云盘分享，未来可能会在蓝奏云和小飞机，看情况。
+＃＃主要在电报和小飞机云盘发布。
 
 ## 版权声明：
 
