--- a/README
+++ b/README
@@ -10,7 +10,7 @@ Excel在线表格：https://kdocs.cn/l/cesQMkm6QxNc
 
 ## 软件列表：
 
-GitHub：https://github.com/axiuluoshiwo/kemiaofx
+GitHub：https://github.com/axiuluoshiwo/kemiaofx/blob/main/List.md
 
 ## TG频道及群组：
 
