--- a/README
+++ b/README
@@ -8,6 +8,9 @@ GitHub：https://github.com/axiuluoshiwo
 
 Excel在线表格：https://kdocs.cn/l/cesQMkm6QxNc
 
+小飞机网盘（所有软件）：
+https://share.feijipan.com/s/FQDHZYsk
+
 ## 软件列表：
 
 GitHub：https://github.com/axiuluoshiwo/kemiaofx/blob/main/List.md
