--- a/README
+++ b/README
@@ -4,6 +4,8 @@
 
 GitHub：https://github.com/axiuluoshiwo
 
+Gitee：https://gitee.com/kemiaoshiwo/kemiaodfx
+
 ## 下载地址：
 
 Excel在线表格：https://kdocs.cn/l/cesQMkm6QxNc
