--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 
 GitHub：https://github.com/axiuluoshiwo
 
-Gitee：https://gitee.com/kemiaoshiwo/kemiaodfx
+Gitee：https://gitee.com/kemiaoshiwo/kemiaofx
 
 ## 下载地址：
 
@@ -16,6 +16,8 @@ https://share.feijipan.com/s/FQDHZYsk
 ## 软件列表：
 
 GitHub：https://github.com/axiuluoshiwo/kemiaofx/blob/main/List.md
+
+Gitee：https://gitee.com/kemiaoshiwo/kemiaofx/blob/master/List.md
 
 ## TG频道及群组：
 
