--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 ## 项目地址：
 
-GitHub：https://github.com/axiuluoshiwo
+GitHub：https://github.com/axiuluoshiwo/kemiofx
 
 Gitee：https://gitee.com/kemiaoshiwo/kemiaofx
 
