--- a/README
+++ b/README
@@ -6,6 +6,8 @@ GitHub：https://github.com/axiuluoshiwo/kemiofx
 
 Gitee：https://gitee.com/kemiaoshiwo/kemiaofx
 
+免翻主页：https://axiuluoshiwo.github.io/
+
 ## 下载地址：
 
 Excel在线表格：https://kdocs.cn/l/cesQMkm6QxNc
