--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 ## 项目地址：
 
-GitHub：https://github.com/axiuluoshiwo/kemiaofx
+GitHub：https://github.com/Kemiaojun/kemiaofx
 
 Gitee：https://gitee.com/kemiaoshiwo/kemiaodfx
 
@@ -17,7 +17,7 @@ https://share.feijipan.com/s/FQDHZYsk
 
 ## 软件列表：
 
-GitHub：https://github.com/axiuluoshiwo/kemiaofx/blob/main/List.md
+GitHub：https://github.com/Kemiaojun/kemiaofx/blob/main/List.md
 
 Gitee：https://gitee.com/kemiaoshiwo/kemiaofx/blob/master/List.md
 
@@ -37,4 +37,4 @@ Telegram群组：https://t.me/+ilqAQsWGXvxkOGE1
 
 ③本项目保证项目内提供的所有可下载资源（软件等等）都是按“原样”提供，本项目未做过任何改动；但本项目不保证本项目提供的下载资源的准确性、安全性和完整性；同时本项目也不承担用户因使用这些下载资源对自己和他人造成任何形式的损失或伤害。不论何种情形本项目都不对任何由于使用或无法使用本项目提供的资源所造成的直接的、间接的、附带的、特殊的或余波所及的损失、灵失、债务或中断负任何责任﹝不论是可预见或是不可预见的，即使本项目已被告知这种可能性﹞。
 
-④如有侵犯您的版权，请电邮至邮箱：aqawere123@163.com，本项目将立即改正。本项目对互联网版权绝对支持。
+④如有侵犯您的版权，请电邮至邮箱：aqwere123@163.com，本项目将立即改正。本项目对互联网版权绝对支持。
