--- a/README
+++ b/README
@@ -6,7 +6,7 @@ GitHub：https://github.com/Kemiaojun/kemiaofx
 
 Gitee：https://gitee.com/kemiaoshiwo/kemiaodfx
 
-免翻主页：https://axiuluoshiwo.github.io/
+免翻主页：https://Kemiaojun.github.io/
 
 ## 下载地址：
 
@@ -25,7 +25,7 @@ Gitee：https://gitee.com/kemiaoshiwo/kemiaofx/blob/master/List.md
 
 Telegram频道：https://t.me/kemiaosw
 
-Telegram群组：https://t.me/+ilqAQsWGXvxkOGE1
+Telegram群组：https://t.me/+x3Cysfgpqh84ZmY1
 
 ＃＃主要在电报和小飞机云盘发布。
 
