--- a/README
+++ b/README
@@ -6,7 +6,7 @@ GitHub：https://github.com/Kemiaojun/kemiaofx
 
 Gitee：https://gitee.com/kemiaoshiwo/kemiaodfx
 
-免翻主页：https://Kemiaojun.github.io/
+免翻主页：https://kemiaofx.top/
 
 ## 下载地址：
 
@@ -23,7 +23,7 @@ Gitee：https://gitee.com/kemiaoshiwo/kemiaofx/blob/master/List.md
 
 ## TG频道及群组：
 
-Telegram频道：https://t.me/kemiaosw
+Telegram频道：https://t.me/kemiaofx_me
 
 Telegram群组：https://t.me/+x3Cysfgpqh84ZmY1
 
