--- a/README
+++ b/README
@@ -12,9 +12,8 @@ Gitee：https://gitee.com/kemiaoshiwo/kemiaodfx
 
 Excel在线表格：https://kdocs.cn/l/cesQMkm6QxNc
 
-123云盘（所有软件）：
-https://www.123684.com/s/N1NlVv-yVpod
-暂时准备放弃小飞机云盘（不打算迁移软件，趁能用尽早）
+小飞机云盘（所有软件）：
+https://share.feijipan.com/s/FQDHZYsk
 
 ## 软件列表：
 
