--- a/README
+++ b/README
@@ -6,7 +6,7 @@ GitHub：https://github.com/Kemiaojun/kemiaofx
 
 Gitee：https://gitee.com/kemiaoshiwo/kemiaodfx
 
-免翻主页：https://kemiaofx.top/
+免翻主页：https://kemiaofx.top/ https://kemiaosw.top/ https://kemiaoshiwo.top/
 
 ## 下载地址：
 
